I think I have fixed the label vertical alignment

--- a/css/usb.css
+++ b/css/usb.css
@@ -44,7 +44,7 @@
     position: relative;
     display: inline-block;
     margin: 0;
-    padding-top: 0.24em; 
+    padding-top: 0.42em; 
     padding-right: 0.42em;
     min-width: 3.42em;
     color: black;
